--- a/intermine/webapp/main/resources/webapp/css/webapp.css
+++ b/intermine/webapp/main/resources/webapp/css/webapp.css
@@ -114,21 +114,32 @@ li {
 
 #header h1, #header h1 a:link, #header h1 a:visited {
     margin: 0px;
-    padding: 0px;
-    margin-top: 5px;
+    padding: 3px;
+    margin-top: 1px;
     color: #FFF;
-    font-size: 1.4em;
+    font-size: 1.5em;
     font-weight: bold;
     float: left;
+    font-family: "Lucida Grande",Verdana,Geneva,Lucida,Helvetica,Arial,sans-serif;
 }
 
 #header p {
-    margin: 20px 0 0 5px;;
+    margin: 10px 0 0 0px;;
     color: white;
     font-size: 1em;
     font-weight: normal;
     float: left;
 }
+
+#header2 p {
+    margin: -10px 0 0 8px;;
+    color: black;
+    font-size: 0.8em;
+    font-weight: normal;
+    font-family: "Lucida Grande",Verdana,Geneva,Lucida,Helvetica,Arial,sans-serif;
+    float: left;
+}
+
 
 p#version {
     font-size: 12px;
@@ -1365,8 +1376,8 @@ select#extraConstraintSelect {
 
 /* context messages */
 .topBar.info {
-    background: #E6F7FE url("../images/icons/information.png") no-repeat 10px 6px;
-    border: 1px solid #BEDCE4;
+    background: #F0F0F0 url("../images/icons/information.png") no-repeat 10px 6px;
+    border: 1px solid #000000;
     margin: 10px 10px 0 10px;
     padding: 6px 6px 6px 34px;
 }
@@ -1669,76 +1680,6 @@ div.bagDetails-page div.widget { width:460px; height:auto; max-height:none !impo
     margin:0 10px 20px 10px; text-align:left; border-width:1px; border-style:solid; }
 
 /* footer links, logo and stuff */
-
-#promo-footer {
-  background: #eee;
-  margin-bottom: 1em;
-}
-#promo-footer:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-#promo-footer .footer {
-  width: 60%;
-  float: left;
-  clear: right;
-  box-sizing: border-box;
-  padding: 0.5em;
-}
-.funding-footer p {
-  margin: 0.5em;
-}
-#promo-footer .powered-footer, #promo-footer .android-footer {
-  width: 20%
-}
-
-#promo-footer {display:flex;
-align-items:stretch;
-}
-#promo-footer .powered-footer {width:50%}
-
-.powered-footer {max-width:20%;}
-
-.cite-footer {max-width:50%;
-}
-
-.cite-footer {
-text-align:justify;}
-
-
-#promo-footer {
-display:flex;
-align-items:center;
-}
-
-.android img.googleplay {width:80%;}
-.android a {width:100%}
-
-.android {
-max-width:30%;
-margin:1em;
-display:flex;
-align-items:center;
-justify-content:space-between;
-background:rgba(255,255,255,0.9)}
-
-.android p {
-width:90%;}
-
-
-.funding-footer .cite { text-align:justify; }
-
-.funding-footer {
-  display:flex;
-  justify-content:space-around;
-  background:#eee;
-  align-items:center;}
-.credits img {
-  max-width:80px;
-  margin-top:-6px;
-  margin-bottom:-6px;}
-
 div.bottom-footer { margin:0 auto; width:940px; margin-top:20px; }
 div.bottom-footer a.cambridge-logo { float:right; }
 
